[package]
name = "hide"
description = "Hides sensitive information in JSON files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.2.0"
