[package]
name = "hide"
description = "Hides sensitive information in JSON files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.22", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.105"
simple_logger = "4.2.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.3"
